fixed misc styling. Added column headers on mobile

--- a/force-app/main/default/lwc/listFiltersButton/listFiltersButton.css
+++ b/force-app/main/default/lwc/listFiltersButton/listFiltersButton.css
@@ -4,10 +4,10 @@
     justify-content: center;
     align-items: center;
     height: 3em;
-    width: 6em;
+    width: 5em;
     padding: 0.5rem;
     border: 1px solid var(--filterButtonBorderColor);
-    border-radius: 3px;
+    border-radius: 2px;
     background-color: var(--filterButtonBackgroundColor);
 }
 
